# blacspp

./: .travis.yml  CMakeLists.txt
.github/workflows/: cmake.yml
.github/workflows/scripts/: build_scalapack.sh
cmake/: HandleCatch2.cmake  HandleGTest.cmake  blacspp-config.cmake.in
cmake/modules/: FindBLACS.cmake
example/cmake_discovery/: CMakeLists.txt  test.cxx
include/blacspp/: broadcast.hpp  config.hpp.in  grid.hpp  information.hpp  send_recv.hpp  types.hpp
include/blacspp/util/: sfinae.hpp  type_conversions.hpp  type_traits.hpp
include/blacspp/wrappers/: broadcast.hpp  combine.hpp  send_recv.hpp  support.hpp
scripts/: build_travis.sh  travis-toolchain.cmake
src/: CMakeLists.txt  broadcast.cxx  combine.cxx  grid.cxx  mpi_info.cxx  send_recv.cxx  support.cxx  type_conversions.cxx
tests/: CMakeLists.txt  blacs_test.cxx  broadcast.cxx  constructor.cxx  send_recv.cxx  ut.cxx
tests/cmake/discovery/: CMakeLists.txt
tests/cmake/subproject/: CMakeLists.txt  blacspp_linker_test.cxx
